Added documentation for presenting-data project.